feat: add playlist pagination
